# FLE

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  README.md  configure-shell-for-pyenv.sh  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml
examples/: README.md
examples/cli/: README.md  cli-example.sh
examples/grpc/: README.md
examples/python-library/: README.md  direct_api_example.py  gym_api_example.py
proto/fle/: common.proto  logistics_belt_placement_problem.proto
src/: README.md
src/fle/: __init__.py  __main__.py
src/fle/environments/logistics_belt_placement_problem/: __init__.py  encoding.py  evaluator.py  gym.py  problems.py
src/fle/factorio_server/: __init__.py  factorio_server.py  ports.py  rcon.py  server-settings.json  world.py
src/fle/factorio_server/factorio_mod/: README.md  __init__.py
src/fle/factorio_server/factorio_mod/mod_data/: __init__.py  control.lua  data.lua  info.json  rpc.lua
src/fle/grpc/: client.py  server.py
src/fle/grpc/proto/: .gitignore
src/fle/gym/: __init__.py  async_env.py
tests/: examples_test.py  factorio_server_test.py  grpc_test.py
tests/environments/: logistics_belt_placement_problem_test.py
